--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
